fixed news spacing on mobile

--- a/frontend/src/pages/_News.scss
+++ b/frontend/src/pages/_News.scss
@@ -3,7 +3,7 @@
   background-color: var(--background-color);
 
   &__content {
-    padding: var(--big-space) var(--mega-space) var(--mega-space);
+    padding: var(--big-space) var(--medium-space) var(--mega-space);
   }
 
   &__status {
