--- a/frontend/src/pages/_Projects.scss
+++ b/frontend/src/pages/_Projects.scss
@@ -13,7 +13,7 @@
     }
 
     @media (max-width: 600px) {
-      padding: var(--medium-space) var(--bigger-space);
+      padding: var(--medium-space);
     }
   }
 
